[package]
name = "discv4"
version = "0.1.0"
license = "Apache-2.0"
authors = [
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Wei Tang <hi@that.world>",
]
description = "Ethereum's Node Discovery v4."
repository = "https://github.com/rust-ethereum/discv4"
edition = "2018"

[dependencies]
anyhow = "1"
array-init = "1"
arrayref = "0.3"
arrayvec = "0.5"
async-trait = "0.1"
bytes = "0.6"
chrono = "0.4"
enum-primitive-derive = "0.2"
fixed-hash = { version = "0.6", features = ["std"] }
futures-util = "0.3"
hex = "0.4.2"
igd = { version = "0.11", features = ["aio"] }
num-traits = "0.2"
parking_lot = "0.11"
plain_hasher = "0.2"
primitive-types = { git = "https://github.com/paritytech/parity-common", default-features = false, features = ["rlp", "std"] }
rand = "0.7"
rlp = { git = "https://github.com/paritytech/parity-common" }
rlp-derive = { git = "https://github.com/paritytech/parity-common" }
secp256k1 = { version = "0.19", features = ["global-context", "rand-std", "recovery"] }
sha3 = "0.9"
task-group = { git = "https://github.com/vorot93/task-group" }
thiserror = "1"
tokio = { version = "0.3", features = ["net", "rt", "sync", "time"] }
tokio-compat-02 = "0.1"
tracing = "0.1"
tracing-futures = "0.2"
url = "2"

[dev-dependencies]
secp256k1 = "0.19"
tokio = { version = "0.3", features = ["full"] }
tracing-subscriber = "0.2"
